--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ python:
   - "3.7-dev"
   - "nightly" # currently points to 3.7-dev
 
+services:
+  - docker
 
 before_install:
   docker build -t markusressel/deinemudda .
@@ -15,3 +17,10 @@ install:
 # command to run tests
 script:
   - nosetests
+
+deploy:
+  provider: script
+  script: bash docker_push
+  on:
+    branch: master
+    tags: true
