--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-  - "3.7-dev"
-  - "nightly" # currently points to 3.7-dev
+  # currently not compatible with 3.7
 
 services:
   - docker
