--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ services:
 before_install:
   docker build -t markusressel/deinemudda .
 install:
+  - pip install -r requirements.txt
   - pip install -r test_requirements.txt
 # command to run tests
 script:
