--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ python:
 
 before_install:
   docker build -t markusressel/deinemudda .
-#install:
-#  - pip install -r requirements.txt
-#  - pip install -r test_requirements.txt
-# command to run tests
-#script:
-#  - nosetests
+install:
+  - pip install -r requirements.txt
+  - pip install -r test_requirements.txt
+  command to run tests
+script:
+  - nosetests
 
 deploy:
   - provider: script
