Update .rancher-pipeline.yml file

--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -5,5 +5,7 @@ stages:
       dockerfilePath: ./Dockerfile
       buildContext: .
       tag: markusressel/deinemudda:latest
+      pushRemote: true
+      registry: index.docker.io
 timeout: 60
 notification: {}
