--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,15 @@ python:
 services:
   - docker
 
-before_install:
-  docker build -t markusressel/deinemudda .
 install:
   - pip install -r requirements.txt
   - pip install -r test_requirements.txt
   # command to run tests
 script:
   - nosetests
+
+before_deploy:
+  docker build -t markusressel/deinemudda .
 
 deploy:
   - provider: script
