--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,16 @@ services:
   - docker
 
 install:
-  - pip install -r requirements.txt
-  - pip install -r test_requirements.txt
+  - pip install --upgrade pip
+  - pip install pipenv
+  - pipenv install --system --deploy
+  - pip install --no-cache-dir .
+
   # command to run tests
 script:
+  - cd tests
   - nosetests
+  - cd ..
 
 before_deploy:
   docker build -t markusressel/deinemudda .
