use TextBlob instead of Pattern (#142)
* use TextBlob instead of Pattern

* update python version to 3.10

* update python version to 3.10

* download required nltk data

--- a/.github/workflows/python_package.yml
+++ b/.github/workflows/python_package.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [ 3.6 ]
+        python-version: [ "3.10" ]
 
     steps:
       - uses: actions/checkout@v1
@@ -25,6 +25,7 @@ jobs:
       - name: Test with pytest
         run: |
           pipenv install --system --deploy
+          python -m textblob.download_corpora
           pip install pytest
           cd tests
           pytest
